Adjust Code with Cleaner version